--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "events": "^3.3.0",
-    "expo": "~54.0.25",
+    "expo": "~54.0.26",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -25,7 +25,8 @@
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
+    "expo-router": "~6.0.16",
+    "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
